--- a/index.html
+++ b/index.html
@@ -64,7 +64,15 @@
                   <a class="nav-link active" aria-current="page">INCIO</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="fotos.html">FOTOS</a>
+                  <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    FOTOS
+                  </a>
+                  <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="cumple.html">CUMPLE 20</a></li>
+                    <li><a class="dropdown-item" href="">MONTERREY</a></li>
+                    <li><a class="dropdown-item" href="#">MÉRIDA</a></li>
+                    <li><a class="dropdown-item" href="#">GUADALAJARA</a></li>
+                  </ul>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link">VIDEOS</a>
