--- a/index3.html
+++ b/index3.html
@@ -71,7 +71,7 @@
                   </ul>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link">VIDEOS</a>
+                    <a class="nav-link" href="videos.html">MÚSICA</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
